--- a/src/ggrc/assets/mustache/components/ca-object/ca-object-modal-content.mustache
+++ b/src/ggrc/assets/mustache/components/ca-object/ca-object-modal-content.mustache
@@ -26,13 +26,14 @@
       {{#if evidence}}
         <div class="simple-modal__section">
             <div class="simple-modal__section-title">Evidence
-              <spinner class="simple-modal__section-title-icon" {toggle}="*isUpdatingEvidences"></spinner>
+              <spinner class="simple-modal__section-title-icon" {toggle}="isUpdatingEvidences"></spinner>
             </div>
-            <related-documents {instance}="instance" document-type="EVIDENCE" {^is-loading}="*isUpdatingEvidences">
+            <related-documents {instance}="instance" document-type="EVIDENCE" {^is-loading}="isUpdatingEvidences">
                 <object-list {items}="documents" {empty-message}="noItemsText">
                   <editable-document-object-list-item {document}="{.}">
                       <action-toolbar-control>
                           <unmap-button
+                              (before-unmap)="removeDocument(%event)"
                               (unmapped)="loadDocuments()"
                               {destination}="instance"
                               {source}="document">
@@ -41,7 +42,10 @@
                       </action-toolbar-control>
                   </editable-document-object-list-item>
                 </object-list>
-                <attach-button (refresh-evidences)="loadDocuments()" {instance}="instance"></attach-button>
+                <attach-button
+                        (before-create)="addDocuments(%event)"
+                        (refresh-evidences)="loadDocuments()"
+                        {instance}="instance"></attach-button>
             </related-documents>
         </div>
       {{/if}}
@@ -54,8 +58,9 @@
                              {(value)}="*commentValue"
                              {^is-saving}="*isSaving"
                              (comment-created)="onCommentCreated(%event)"
+                             {is-disabled}="isUpdatingEvidences"
          >Save</comment-add-button>
       {{/if}}
-        <button class="btn btn-small btn-white simple-modal__toolbar-item" ($click)="hide">Close</button>
+        <button class="btn btn-small btn-white simple-modal__toolbar-item" ($click)="hide" {{#if isUpdatingEvidences}}disabled{{/if}}>Close</button>
     </div>
 </div>
