--- a/src/ggrc/assets/mustache/components/people/editable-people-group.mustache
+++ b/src/ggrc/assets/mustache/components/people/editable-people-group.mustache
@@ -5,7 +5,9 @@
 
 <div class="editable-people-group">
 <label class="action-toolbar editable-people-group__label required-label">
-  {{title}}
+  <span class="people-group__title">
+    {{title}}
+  </span>
   {{#if required}}
     <form-validation-icon {validation}="validation"></form-validation-icon>
   {{/if}}
