--- a/src/ggrc/assets/mustache/assessments/modal_content_additional_fields.mustache
+++ b/src/ggrc/assets/mustache/assessments/modal_content_additional_fields.mustache
@@ -3,23 +3,36 @@
     Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
 }}
 
-<div class="editable-form-row">
-  <div class="editable-form-long-input">
-    <label>
+<div class="ggrc-form-item">
+  <div class="ggrc-form-item__row">
+    <label class="ggrc-form-item__label">
       Notes
     </label>
-    <input data-id="note_txtbx" tabindex="5" class="input-block-level"
-        placeholder="Enter Notes" name="notes" type="text" id="notes" value="{{notes}}"/>
+    <input data-id="note_txtbx"
+      tabindex="10"
+      class="input-block-level"
+      placeholder="Enter Notes"
+      name="notes"
+      type="text"
+      id="notes"
+      value="{{notes}}"/>
   </div>
 </div>
 
-<div class="editable-form-row">
-  <div class="editable-form-long-input">
-    <label>
+<div class="ggrc-form-item ggrc-form-item__text-area">
+  <div class="ggrc-form-item__row">
+    <label class="ggrc-form-item__label">
       Description
     </label>
     <div class="wysiwyg-area">
-      <textarea tabindex="2" id="control_description" class="span12 triple wysihtml5" name="description" placeholder="Enter Description">{{{description}}}</textarea>
+      <textarea
+        tabindex="11"
+        id="control_description"
+        class="span12 triple wysihtml5"
+        name="description"
+        placeholder="Enter Description">
+          {{{description}}}
+      </textarea>
     </div>
   </div>
 </div>
@@ -28,31 +41,66 @@
   <span style="color: red">TODO:</span>REFERENCES
 </div>-->
 
-<div class="editable-form-row">
-  <div class="editable-form-short-input">
-    <label>
+<!-- old version of REFERENCES -->
+<div class="ggrc-form-item">
+  <div class="ggrc-form-item__multiple-row">
+    <label class="ggrc-form-item__label">
+      Assessment URL
+    </label>
+    <input data-id="url_txtbx"
+      tabindex="12"
+      name="url"
+      class="input-block-level"
+      placeholder="http://www.domain.com/"
+      type="text"
+      value="{{url}}">
+  </div>
+  <div class="ggrc-form-item__multiple-row">
+    <label class="ggrc-form-item__label">
+      Reference URL
+    </label>
+    <input data-id="reference_url_txtbx"
+      tabindex="13"
+      id="reference_url"
+      class="input-block-level"
+      placeholder="https://www.example.com/"
+      name="reference_url"
+      type="text"
+      value="{{reference_url}}">
+  </div>
+</div>
+
+<div class="ggrc-form-item">
+  <div class="ggrc-form-item__multiple-row">
+    <label class="ggrc-form-item__label">
       Code
     </label>
-    <input data-id="code_txtbx" tabindex="8" class="input-block-level" name="slug" placeholder="ASSESSMENT-XXX" type="text" value="{{slug}}">
+    <input data-id="code_txtbx"
+      tabindex="14"
+      class="input-block-level"
+      name="slug"
+      placeholder="ASSESSMENT-XXX"
+      type="text"
+      value="{{slug}}">
   </div>
-  <div class="editable-form-short-input">
-    <label>
+  <div class="ggrc-form-item__multiple-row">
+    <label class="ggrc-form-item__label">
       Effective Date
     </label>
     <datepicker
-      tabindex="20"
+      tabindex="15"
       date="instance.start_date"
       set-max-date="instance.end_date"
       helptext="Enter the date this object becomes effective."
       test-id="startTestId"
     />
   </div>
-  <div class="editable-form-short-input">
-    <label>
+  <div class="ggrc-form-item__multiple-row">
+    <label class="ggrc-form-item__label">
       Stop Date
     </label>
     <datepicker
-      tabindex="21"
+      tabindex="16"
       date="instance.end_date"
       set-min-date="instance.start_date"
       helptext="Enter the date this object stops being effective."
@@ -61,42 +109,44 @@
   </div>
 </div>
 
-<div class="editable-form-row">
-  <div class="editable-form-short-input">
-    <label>
+<div class="ggrc-form-item">
+  <div class="ggrc-form-item__multiple-row">
+    <label class="ggrc-form-item__label">
       Conclusion: Design
     </label>
-    <small>
+    <div class="ggrc-form-item__small-text">
+      <small>
         <em>Is this control design effective?</em>
-    </small>
-    <dropdown tabindex="9"
+      </small>
+    </div>
+    <dropdown tabindex="17"
               options-list="model.conclusions"
               no-value="true"
               no-value-label="---"
-              name="instance.design"
-              tabindex="23">
+              name="instance.design">
     </dropdown>
   </div>
-  <div class="editable-form-short-input">
-    <label>
+  <div class="ggrc-form-item__multiple-row">
+    <label class="ggrc-form-item__label">
       Conclusion: Operation
     </label>
-    <small>
-      <em>Is this control design effective?</em>
-    </small>
-    <dropdown tabindex="10"
+    <div class="ggrc-form-item__small-text">
+      <small>
+        <em>Is this control design effective?</em>
+      </small>
+    </div>
+    <dropdown tabindex="18"
               options-list="model.conclusions"
               no-value="true"
               no-value-label="---"
-              name="instance.operationally"
-              tabindex="23">
+              name="instance.operationally">
     </dropdown>
   </div>
 </div>
 
-<div class="editable-form-row">
-  <div class="editable-form-long-input">
-    <label>
+<div class="ggrc-form-item">
+  <div class="ggrc-form-item__row">
+    <label class="ggrc-form-item__label">
       Audit
     </label>
     <div>
