--- a/src/ggrc/assets/stylesheets/components/people-group/_people-group.scss
+++ b/src/ggrc/assets/stylesheets/components/people-group/_people-group.scss
@@ -14,17 +14,20 @@
     flex-basis: 250px;
     max-width: 250px;
     margin-right: 30px;
-    margin-bottom: 20px;
 
     input {
       width: 100%;
     }
 
-    label {
+    .people-group__title {
       text-transform: uppercase;
       font-size: 12px;
       font-weight: bold;
       margin-bottom: 0px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      max-width: 240px;
     }
 
     .people-group__person {
@@ -35,8 +38,8 @@
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
-      max-width: 240px;
-      flex: 1 1;
+      max-width: 220px;
+      margin-right: 5px;
     }
 
     .person-holder {
@@ -45,13 +48,13 @@
     }
 
     .user-disabled {
-      flex: 1 1;
       white-space: nowrap;
-      margin-left: 5px;
     }
   }
 
   .editable-people-group {
+    margin-bottom: 20px;
+
     .editable-people-group__label {
       line-height: 28px;
     }
