--- a/src/ggrc/assets/mustache/components/people/editable-people-group.mustache
+++ b/src/ggrc/assets/mustache/components/people/editable-people-group.mustache
@@ -6,6 +6,9 @@
 <div class="editable-people-group">
 <label class="action-toolbar editable-people-group__label required-label">
   <span class="people-group__title">
+    {{#unless editableMode}}
+      <spinner class="people-group__title-spinner" {toggle}="isLoading"></spinner>
+    {{/unless}}
     {{title}}
   </span>
   {{#if required}}
@@ -28,22 +31,27 @@
   <div class="inline-edit inline-edit--active">
       <div class="inline-edit__content editable-people-group__inline">
         <div class="editable-people-group__inline-content">
-          <object-list ({items})="people" {empty-message}="emptyListMessage">
+          <object-list
+            ({items})="people"
+            {is-disabled}="isLoading"
+            {empty-message}="emptyListMessage">
             <person-list-item person="{.}" {with-details}="withDetails">
-              {{#is_allowed 'update' instance}}
-                {{#if canUnmap}}
-                  {{#unmapablePerson required peopleLength}}
-                    <a href="javascript://" class="info-action" ($click)="unmap(person)">
-                      <i class="fa fa-trash"></i>
-                    </a>
-                  {{/unmapablePerson}}
-                {{/if}}
-              {{/is_allowed}}
+              {{#if canUnmap}}
+                {{#unmapablePerson required peopleLength}}
+                  {{#is_allowed 'update' instance}}
+                  <a href="javascript://"
+                    class="info-action editable-people-group__unmap {{#if isDisabled}}disabled{{/if}}"
+                    ($click)="unmap(person)">
+                    <i class="fa fa-trash"></i>
+                  </a>
+                  {{/is_allowed}}
+                {{/unmapablePerson}}
+              {{/if}}
             </person-list-item>
           </object-list>
           <div>
           {{#if isLoading}}
-            <spinner toggle="isLoading"></spinner>
+            <spinner {toggle}="isLoading"></spinner>
           {{else}}
             {{#is_allowed 'update' instance}}
               <autocomplete
