--- a/src/ggrc/assets/mustache/assessment_templates/modal_content.mustache
+++ b/src/ggrc/assets/mustache/assessment_templates/modal_content.mustache
@@ -8,6 +8,29 @@
   <form action="javascript://">
     {{> /static/mustache/base_objects/form_restore.mustache}}
 
+    <div class="row-fluid choose-object">
+      <div class="span12">
+        <label>
+          Default Assessment Type
+          <span class="required">*</span>
+        </label>
+
+        <assessment-object-type-dropdown
+          css-class="input-medium pull-left"
+          {(assessment-type)}="instance.template_object_type">
+        </assessment-object-type-dropdown>
+
+        {{#if_equals instance.template_object_type 'Control'}}
+        <label class="inline-check pull-left">
+          <input type="checkbox"
+            can-value="instance.test_plan_procedure"
+            class="js-toggle-controlplans">
+          Use control test plans as assessment test plan
+        </label>
+        {{/if_equals}}
+      </div>
+    </div>
+
     <div class="row-fluid">
       <div class="span6 {{#instance.computed_errors.title}}field-failure{{/instance.computed_errors.title}}">
         <label>
@@ -44,44 +67,6 @@
     </div>
 
     <br />
-
-    <div class="row-fluid choose-object">
-      <div class="span12">
-        <label>
-          Objects under assessment
-          <span class="required">*</span>
-        </label>
-
-        {{#add_to_current_scope objectTypes=instance._objectTypes}}
-        <select
-          class="input-medium pull-left"
-          can-value="instance.template_object_type">
-          {{#each objectTypes}}
-            {{#if items}}
-              {{#if items.length}}
-              <optgroup label="{{name}}">
-                {{#each items}}
-                  {{#if name}}
-                    <option value="{{value}}" label="{{name}}"></option>
-                  {{/if}}
-                {{/each}}
-              </optgroup>
-              {{/if}}
-            {{/if}}
-          {{/each}}
-        </select>
-        {{/add_to_current_scope}}
-
-        {{#if_equals instance.template_object_type 'Control'}}
-        <label class="inline-check pull-left">
-          <input type="checkbox"
-            can-value="instance.test_plan_procedure"
-            class="js-toggle-controlplans">
-          Use control test plans as assessment test plan
-        </label>
-        {{/if_equals}}
-      </div>
-    </div>
 
     <div class="row-fluid">
       <div class="span6 hidable">
