--- a/src/ggrc/assets/mustache/assessments/modal_content.mustache
+++ b/src/ggrc/assets/mustache/assessments/modal_content.mustache
@@ -19,6 +19,17 @@
   {{/if}}
 
   <div class="row-fluid">
+    <label>
+      Assessment Type
+      <span class="required">*</span>
+    </label>
+    <assessment-object-type-dropdown
+      css-class="input-medium pull-left"
+      {(assessment-type)}="instance.assessment_type">
+    </assessment-object-type-dropdown>
+  </div>
+
+  <div class="row-fluid">
     <div class="span6 {{#instance.computed_errors.title}}field-failure{{/instance.computed_errors.title}}">
       <label>
         Title
