--- a/src/ggrc/assets/stylesheets/_components.scss
+++ b/src/ggrc/assets/stylesheets/_components.scss
@@ -41,3 +41,4 @@
 @import "components/object-tasks/object-tasks";
 @import "components/tasks-counter/tasks-counter";
 @import "components/object-state-toolbar/object-state-toolbar";
+@import "components/inline/inline";
