--- a/src/ggrc/assets/stylesheets/modules/_inline-edit.scss
+++ b/src/ggrc/assets/stylesheets/modules/_inline-edit.scss
@@ -7,6 +7,16 @@
   &__title {
     padding-left: 4px;
   }
+  &__header {
+    display: flex;
+    align-items: center;
+    line-height: 28px;
+    min-height: 28px;
+
+    label {
+      margin: 0;
+    }
+  }
   &__content {
     @include border-radius(2px);
     max-width: 100%;
