Hide AdvancedSearch for stateless entities

--- a/src/ggrc/assets/mustache/components/tree/tree-filter-input.mustache
+++ b/src/ggrc/assets/mustache/components/tree/tree-filter-input.mustache
@@ -12,15 +12,17 @@
   <span class="tree-filter_is-expression {{#if isExpression}}valid{{/if}}">
     <i class="fa fa-check-circle{{#unless isExpression}}-o{{/unless}}"></i>
   </span>
-  {{^if disabled}}
-  <a href="javascript://" class="advanced-filter" ($click)="openAdvancedFilter()">
-    <i class="fa fa-filter"></i>
-  </a>
-  {{else}}
-  <div class="advanced-filter-controls">
-    <a href="javascript://" ($click)="openAdvancedFilter()">Filtered</a>
-    <a href="javascript://" ($click)="removeAdvancedFilters()"><i class="fa fa-remove"></i></a>
-  </div>
+  {{#if showAdvanced}}
+    {{^if disabled}}
+    <a href="javascript://" class="advanced-filter" ($click)="openAdvancedFilter()">
+      <i class="fa fa-filter"></i>
+    </a>
+    {{else}}
+    <div class="advanced-filter-controls">
+      <a href="javascript://" ($click)="openAdvancedFilter()">Filtered</a>
+      <a href="javascript://" ($click)="removeAdvancedFilters()"><i class="fa fa-remove"></i></a>
+    </div>
+    {{/if}}
   {{/if}}
 </div>
 <div class="flex-box tree-filter__actions">
